# searchie

./: AGENTS.MD  README.md  components.json  index.html  package.json  plugin-creation.md  vite.config.ts
apps/searchie/: AGENTS.md  package.json  plugin-creation.md  vitest.config.ts
apps/searchie/public/: settings.json
apps/searchie/scripts/: build-core-plugins.ts  generate-windows-settings-json.ts
apps/searchie/src/: main.tsx
apps/searchie/src-tauri/: Cargo.toml  tauri.conf.json
apps/searchie/src-tauri/capabilities/: default.json  settings.json
apps/searchie/src-tauri/icons/: icon.icns
apps/searchie/src-tauri/src/: db.rs  icons.rs  lib.rs  plugins.rs  runtime_plugin_develop.rs  system_controls.rs
apps/searchie/src-tauri/src/features/: apps.rs  clipboard.rs  events.rs  files.rs
docs/: runtime-plugin-architecture-and-core-utilities-migration.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: apps.rs  clipboard.rs  db.rs  file_search.rs  icons.rs  lib.rs  main.rs  system_controls.rs
src-tauri/src/features/: apps.rs  clipboard.rs  events.rs  mod.rs  system_controls.rs  windows.rs
src/components/: clipboard-panel.tsx  launcher-panel.tsx  launcher-search-input.tsx  panel-actions-footer.tsx  settings-panel.tsx
src/components/__tests__/: clipboard-panel.test.tsx  launcher-panel.test.tsx  panel-actions-footer.test.tsx
src/components/framework/: index.ts  panel-hooks.ts  panel-primitives.tsx
src/components/launcher/: launcher-panel.tsx  panel-actions-footer.tsx  (+1 more)
src/lib/: apps-icon-cache.ts  apps-list-cache.ts  panel-contract.ts  panel-matchers.ts  panel-registry.ts  plugin-config-store.ts  plugin-contract.ts  plugin-registry.ts  settings-schema.ts  tauri-commands.ts
src/routes/: __root.tsx  index.tsx  settings.tsx
(+211 files in other folders)
