[package]
name = "searchie"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "searchie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
window-vibrancy = "0.7"
tauri-plugin-store = "2"
winreg = "0.52"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
png = "0.17"
base64 = "0.22"
winapi = { version = "0.3", features = ["shellapi", "wingdi", "winuser", "windef", "combaseapi", "objbase", "shlobj", "shobjidl_core", "shtypes"] }
tokio = { version = "1", features = ["rt", "time"] }
windows = { version = "0.61", features = ["Devices_Radios", "Foundation", "Foundation_Collections", "Media_Control", "Win32_Foundation", "Win32_UI_Shell", "Win32_System_Com", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints"] }
arboard = "3.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zip = "2.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
